@@ -2,6 +2,7 @@ debbugs (2.4.2) UNRELEASED; urgency=low
 
   * Colin Watson:
     - Add (slightly) fancy CGI decoding of message/* MIME types.
+    - CGI scripts now support multiple maintainers for a single package.
 
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
 
